# relenv

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  NOTICE  Python-3.13.14.tar.xz.asc  README.md  build.py  check.py  config.status  noxfile.py  pyproject.toml  relenv-pyconfig-fix.md  setup.cfg  setup.py
.github/scripts/: prepare_release_pr.py
.github/workflows/: auto-merge.yml  auto-release.yml  auto-update-versions.yml  build-action.yml  build-cross-action.yml  build-native-action.yml  build.yml  ci.yml  darwin_x86_64.yml  deploy-build-action.yml  deploy-package-action.yml  deploy-toolchain-action.yml  docs-action.yml  docs.yml  github-release.yml  package-action.yml  pr.yml  pre-commit-action.yml  pre-commit.yml  release.yml  retry-flaky-verify.yml  test-action.yml  test-fips-action.yml  toolchain-action.yml  toolchain-docker-action.yml  toolchain.yml  unittest.yml  verify-build-action.yml  wtf.yml
.pre-commit-hooks/: check_changelog_entries.py  copyright_headers.py
changelog/: 20260603214345.improvement.rst
docs/source/: additional-dependencies.rst  changelog.rst  conf.py  contributing.rst  index.rst  license.rst  toolchain.rst  usage.rst
docs/source/_static/: README.md
docs/source/cli/: build.rst  create.rst  fetch.rst  index.rst  mayflower.rst  relenv.rst  toolchain.rst
docs/source/developer/: common.rst  create.rst  entrypoint.rst  fetch.rst  index.rst  relocate.rst  runtime.rst  toolchain.rst
mayflower/: __main__.py  common.py  create.py  fetch.py  relocate.py  relok8.py  runtime.py  setup.cfg  toolchain.py
mayflower/_toolchain/: aarch64-linux-gnu-ct-ng.config  x86_64-linux-gnu-ct-ng.config
mayflower/_toolchain/aarch64/: aarch64-linux-gnu-ct-ng.config  x86_64-linux-gnu-ct-ng.config
mayflower/_toolchain/x86_64/: aarch64-linux-gnu-ct-ng.config  x86_64-linux-gnu-ct-ng.config
relenv/: .common.py.swp  __init__.py  __main__.py  buildenv.py  buildenv.py.rej  check.py  common.py  create.py  fetch.py  manifest.py  patchelf  patchelf.py  pyproject.toml  python-versions.json  pyversions.py  relocate.py  runtime.py  sbom.py  toolchain.py
relenv/_resources/xz/: readme.md
relenv/_scripts/: install_vc_build.ps1
relenv/_toolchain/aarch64/: aarch64-linux-gnu-ct-ng.config  x86_64-linux-gnu-ct-ng.config
relenv/_toolchain/x86_64/: aarch64-linux-gnu-ct-ng.config  x86_64-linux-gnu-ct-ng.config
requirements/: docs.txt  tests.txt
tests/: __init__.py  _pytest_typing.py  conftest.py  helpers.py  requirements.txt  test_build.py  test_common.py  test_create.py  test_downloads.py  test_fips_photon.py  test_module_imports.py  test_pyversions_runtime.py  test_relocate.py  test_relocate_module.py  test_relocate_tools.py  test_runtime.py  test_sbom.py  test_toolchain.py  test_verify_build.py
tests/unit/: test_relocate.py  test_relok8.py
toolchain/: aarch64-linux-gnu-ct-ng-config  x86_64-linux-gnu-ct-ng-config
