# Copyright 2022-2025 Broadcom.
# SPDX-License-Identifier: Apache-2

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
ensure_newline_before_comments=true

[tool.pylint]
max-line-length=120

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
mypy_path = "."
exclude = "relenv/__main__\\.py"
