# Copyright 2022 VMware, Inc.
# SPDX-License-Identifier: Apache-2

[metadata]
name = relenv
version = attr: relenv.common.__version__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
  relenv = relenv
include_package_data = True

[options.entry_points]
console_scripts =
    relenv = relenv.__main__:main
