# Copyright 2022 VMware, Inc.
# SPDX-License-Identifier: Apache-2

[metadata]
name = relenv
version = attr: relenv.common.__version__
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/saltstack/relative-environment-for-python
    Documentation = https://relenv.readthedocs.io/en/latest/
    Changelog = https://relenv.readthedocs.io/en/latest/changelog.html


[options]
packages = find:
package_dir =
  relenv = relenv
include_package_data = True

[options.entry_points]
console_scripts =
    relenv = relenv.__main__:main
